# tosnap

./: README.md  old_OM5_OSNAP_transformations.ipynb  pyproject.toml
data/: README.md
figures/: README.md
notebooks/: 0_calculation.ipynb  1_analysis.ipynb  Atlantos_array.ipynb
scripts/: Atlantic_budgets.py
src/: section.py
tosnap/: __init__.py  atlantic.py  section.py  version.py
